<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".ThrowDices">

    <Button
        android:id="@+id/btnRollDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/roll_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white1"
        app:layout_constraintBaseline_toBaselineOf="@+id/dice2"
        app:layout_constraintEnd_toStartOf="@+id/dice2" />

    <Button
        android:id="@+id/dice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/white3"
        app:layout_constraintBaseline_toBaselineOf="@+id/dice2"
        app:layout_constraintStart_toEndOf="@+id/dice2" />

    <Button
        android:id="@+id/dice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white4"
        app:layout_constraintBaseline_toBaselineOf="@+id/dice5"
        app:layout_constraintEnd_toStartOf="@+id/dice5" />

    <Button
        android:id="@+id/dice5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/white5"
        app:layout_constraintStart_toStartOf="@+id/dice2"
        app:layout_constraintTop_toBottomOf="@+id/dice2" />

    <Button
        android:id="@+id/dice6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/white6"
        app:layout_constraintBaseline_toBaselineOf="@+id/dice5"
        app:layout_constraintStart_toEndOf="@+id/dice5" />

    <TextView
        android:id="@+id/textViewHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hint"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice5" />

    <TextView
        android:id="@+id/noOfThrows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/throwZero"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHowToPlay" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/whereToSave"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noOfThrows">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbars="vertical">

                <RadioButton
                    android:id="@+id/radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/three_or_less" />

                <RadioButton
                    android:id="@+id/radio_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_four" />

                <RadioButton
                    android:id="@+id/radio_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_five" />

                <RadioButton
                    android:id="@+id/radio_six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_six" />

                <RadioButton
                    android:id="@+id/radio_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_seven" />

                <RadioButton
                    android:id="@+id/radio_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_eight" />

                <RadioButton
                    android:id="@+id/radio_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_nine" />

                <RadioButton
                    android:id="@+id/radio_ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_ten" />

                <RadioButton
                    android:id="@+id/radio_eleven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_eleven" />

                <RadioButton
                    android:id="@+id/radio_twelve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="checkButton"
                    android:text="@string/sum_of_twelve" />

            </RadioGroup>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>